--- a/Styles.css
+++ b/Styles.css
@@ -1,43 +1,96 @@
-*{
+html, body{
+    height: 100%;
+}
+
+body{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     background-color: white;
     font-family: sans-serif;
 }
 
-html{
-    height: 100%;
-    width: 100%;
-    margin: 0; /* Remove the default margin in browser (100% fit on the viewport)*/
-    position: relative;
-}
-
-.content{
-    display: flex;
-    flex-direction: column;
-}
-
-.hlink{
-    text-align: right;
-    color: black;
+.header-link{
+    margin-right: 0px;
+    margin-left: auto;
     font-size: 13px;
     padding: 20px;
+    margin-bottom: 20px;
 }
 
-.hlink > a{
-text-decoration: none;
+.header-link > a{
+    text-decoration: none;
+    color: black;
 }
 
-.hlink > a:hover{
+.header-link > a:hover{
     text-decoration: underline;
+    color: black;
 }
 
-#image {
+#image-link{
     margin-right: 25px;
 }
 
-.middle{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.main{
+    text-align: center;
+    margin: auto;
+    padding-bottom: 150px;
+}
+
+.Google-image{
+    cursor: pointer;
+}
+
+.search-bar{
+    padding: 20px;
+    width: 620px;
+}
+
+.search-bar > .bar{
+    border: 1px solid #DCDCDC ;
+    border-radius: 50px;
+    height: 45px;
+    width: 100%;
+    padding-left: 45px;
+    padding-right: 20px;
+    background-image: url("Search-Icon.png");
+    background-size: 18px 18px;
+    background-repeat: no-repeat;
+    background-position: 15px 15px;
+}
+
+.search-bar > .bar:hover, .search-bar > .bar:focus{
+    box-shadow: 0px 0px 8px #DCDCDC;
+    outline: none;
+}
+
+@media only screen and (max-width: 640px){
+    .search-bar{
+        width: calc(100vw - 15px);
+    }
+}
+
+.button{
+    margin: 5px;
+    border-radius: 5px;
+    border: 1.5px solid white;
+    color: #383838;
+    background-color: #F8F8F8;
+    cursor: pointer;
+    font-size: 14.5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 8px;
+    outline: none;
+}
+
+.button:hover{
+    border-color: #D3D3D3;
+}
+
+.button:active, .button:focus{
+    border-color: blue;
 }
 
